# gesture-game-controller

./: fullmodel.py  index_finger.py  index_finger_keypoints.csv  indexmodel.py  indexmodeltraining.ipynb  integratedgame.py  integratedgamev2.py  keypointsextraction.py  keypointsextractionv2.py  main.py  modeltraining.ipynb  pyproject.toml  scaler.pkl  signLanguage.py
model_optimization/: gesture_classes.npy  gesture_classifier_model.pth  gesture_classifier_quant_traced.pt  gesture_classifier_traced.pt  optimize_it.ipynb
